[gd_scene load_steps=3 format=3 uid="uid://bdvs6cc6u4uj6"]

[ext_resource type="Theme" uid="uid://dv8kqrq4wobpt" path="res://themes/trials_style.tres" id="1_l3vt4"]
[ext_resource type="Script" path="res://roulette_hud.gd" id="1_uxp77"]

[node name="RouletteHud" type="CanvasLayer"]
script = ExtResource("1_uxp77")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0431373, 0.12549, 0.152941, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_l3vt4")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ControlHead" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/ControlHead"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/ControlHead/CenterContainer"]
layout_mode = 2
theme_type_variation = &"SuperTitle"
text = "Run Roulette Trials"

[node name="ControlBody" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/ControlBody"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"ChildPanelContainer"

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
columns = 7

[node name="Table0" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "00: x27"
horizontal_alignment = 1

[node name="Table1" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table2" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "1: x27"
horizontal_alignment = 1

[node name="Table3" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table4" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table5" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table6" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table7" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table8" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table9" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table10" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table11" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table12" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table13" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table14" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table15" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table16" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table17" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table18" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table19" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table20" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table21" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table22" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table23" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table24" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table25" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table26" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table27" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table28" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table29" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table30" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table31" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table32" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table33" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table34" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table35" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table36" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="Table37" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"Immutable"
text = "0: x27"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"ChildPanelContainer"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PText" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Probability Per Slot:"

[node name="PValue" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_type_variation = &"Immutable"
text = "2.632%"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="EText" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Expected Value Per Slot:"

[node name="EValue" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_type_variation = &"Immutable"
text = "26.316"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Run Trials"

[node name="ToggleButton" type="Button" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Toggle %"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_l3vt4")
theme_type_variation = &"PanelContainerSlider"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MoneyA" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Number of Trials:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="TrialSlider" type="HSlider" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 10000.0
step = 500.0
value = 1000.0
rounded = true
scrollable = false

[node name="AmountA" type="Label" parent="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_type_variation = &"Immutable"
text = "1000x"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer2/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer2/ToggleButton" to="." method="_on_toggle_button_button_up"]
[connection signal="drag_ended" from="PanelContainer/VBoxContainer/ControlBody/CenterContainer/VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer/HBoxContainer/Control/TrialSlider" to="." method="_on_trial_slider_drag_ended"]
